[gd_scene load_steps=3 format=3 uid="uid://cs18y0ygm8p13"]

[ext_resource type="Script" path="res://src/main/options.gd" id="1_w0opa"]
[ext_resource type="Theme" uid="uid://s0srltpmhp6g" path="res://themes/main/main.tres" id="2_e7rg0"]

[node name="Options" type="AspectRatioContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 0.5625
script = ExtResource("1_w0opa")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="BackgroundOnOff" type="CheckButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 168.0
offset_right = 320.0
offset_bottom = 232.0
theme = ExtResource("2_e7rg0")
action_mode = 0
text = "Background Music: "
flat = true

[node name="GameEffectsOnOff" type="CheckButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 296.0
offset_right = 320.0
offset_bottom = 360.0
text = "Game Audio:"

[node name="BackgroundVolume" type="HSlider" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 232.0
offset_right = 320.0
offset_bottom = 296.0
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 10

[node name="GameEffectsVolume" type="HSlider" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 360.0
offset_right = 320.0
offset_bottom = 424.0
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 10

[node name="ResetHighScores" type="Button" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 488.0
offset_right = 320.0
offset_bottom = 552.0
theme = ExtResource("2_e7rg0")
text = "Reset High Scores"

[connection signal="pressed" from="Control/BackgroundOnOff" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="Control/GameEffectsOnOff" to="." method="_on_check_button_2_pressed"]
[connection signal="value_changed" from="Control/BackgroundVolume" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Control/GameEffectsVolume" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="Control/ResetHighScores" to="." method="_on_reset_high_scores_pressed"]
